[package]
name = "gfs"
version = "0.1.0"
edition = "2018"

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
pixels = "0.6.0"
winit = "0.25.0"
winit_input_helper = "0.10.0"

[workspace]
resolver = "2"

[[example]]
name = "raytracer01"
path = "examples/raytracer01.rs"
